--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
        align-items: center;
        display:flex;
        justify-content: center;
+       background-color: rgb(170, 162, 153);
        
     }
 
